project/ansible/roles/monitoring_stack/files/kps-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-ingress
  namespace: monitoring
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: gitops.drintech.online
    http:
      paths:
      - path: /prometheus
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
      - path: /grafana
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
